--- a/style.css
+++ b/style.css
@@ -128,9 +128,18 @@ h2 {
 }
 
 .card img {
-  width: 50px;
-  height: 50px;
+  width: 100px;
+  height: 100px;
 }
+
+.teste{
+  color: black;
+}
+
+.teste:hover{
+  color: orange;
+}
+
 
 
 /* SKILLS */
